<resources>

	<!-- Generic string resources -->
	<string name="_yes">Sí</string>
	<string name="_no">No</string>
	<string name="_ok">Aceptar</string>
	<string name="_ok_short">OK</string>
	<string name="_cancel">Cancelar</string>
	<string name="_confirm">Confirmar</string>
	<string name="_confirm_operation">Confirmar operación</string>
	<string name="_continue">Continuar</string>
	<string name="_delete">Eliminar</string>
	<string name="_annulate">Anular</string>
	<string name="_sign">Firmar</string>
	<string name="_open">Abrir</string>
	<string name="_enter">Entrar</string>
	<string name="_close">Cerrar</string>
	<string name="_exit">Salir</string>
	<string name="_reload_pg">Recargando Posición Global&#8230;</string>
	<string name="_reload_pg_fail">Se ha producido un error al recargar la Posición Global. Posiblemente la aplicación no muestre información actualizada de tus
		productos.
	</string>
	<string name="_loading">Comprobando operación&#8230;</string>
	<string name="_loading_detail">Cargando detalle&#8230;</string>
	<string name="_loading_pdf">Descargando pdf&#8230;</string>
	<string name="_loading_transactions">Cargando movimientos&#8230;</string>
	<string name="_loading_more_transactions">Cargando más movimientos&#8230;</string>
	<string name="_setup">Configurar</string>
	<string name="_options">Opciones</string>
	<string name="_amount">Importe</string>
	<string name="_generic_error_title">Servicio no disponible</string>
	<string name="_generic_error_message">Se ha producido un error en la conexión. Por favor, inténtelo de nuevo más tarde.</string>
	<string name="_activity_not_found">No se ha encontrado la aplicación</string>
	<string name="_invalid_login">Las credenciales proporcionadas no corresponden a ningún cliente</string>
	<string name="_invalid_url">La URL no es válida</string>
	<string name="_credit">Crédito</string>
	<string name="_debit">Débito</string>
	<string name="_prepaid">Prepago</string>
	<string name="_logout_confirm">¿Desea cerrar la sesión?</string>
	<string name="_asterisk">*</string>

	<!-- Numbers -->
	<string name="_0">0</string>
	<string name="_1">1</string>
	<string name="_2">2</string>
	<string name="_3">3</string>
	<string name="_4">4</string>
	<string name="_5">5</string>
	<string name="_6">6</string>
	<string name="_7">7</string>
	<string name="_8">8</string>
	<string name="_9">9</string>

	<!-- Login -->
	<string name="login_user">Usuario</string>
	<string name="login_pass">Contraseña</string>
	<string name="login_go">Login</string>
	<string name="login_remember">Recordar</string>
	<string name="login_mandatory_user">El campo \'Usuario\' es obligatorio</string>
	<string name="login_mandatory_password">La contraseña es obligatoria</string>
	<string name="login_validate_password_min_length">La contraseña no es válida</string>
	<string name="login_validate_user">El campo \'Usuario\' no es válido</string>

	<!-- Logout -->
	<string name="logout_question">¿Quieres cerrar sesión?</string>
	<string name="logout_exit">Salir</string>
	<string name="logout_cancel">Cancelar</string>

	<!-- Home -->
	<string name="home_detail">Detalle</string>
	<string name="home_cvv">CVV2</string>
	<string name="home_pin">PIN</string>
	<string name="home_activate">Activar</string>
	<string name="home_activate_card">Activar tarjeta</string>
	<string name="home_deactivate">Desactivar</string>
	<string name="home_transactions">Movimientos</string>
	<string name="home_favorite">Favorita</string>
	<string name="home_pay">Realizar Pago</string>
	<string name="home_prepaid_balance">Saldo:</string>
	<string name="home_error_activate_before_favorite">Debes activar esta tarjeta antes de establecerla como favorita</string>

	<!-- Operation Signature-->
	<string name="operation_signature_enter">Introduce tu clave de coordenadas para el código\n
		<b>%1$s</b>
	</string>
	<string name="operation_signature_invalid">La clave de operaciones introducida no es válida. Por favor, vuelva a introducir su clave.</string>

	<!-- Activate card-->
	<string name="activate_ok">Tarjeta activada con éxito</string>

	<!-- Deactivate card-->
	<string name="deactivate_question">¿Seguro que quieres desactivar esta tarjeta temporalmente?</string>
	<string name="deactivate_favorite_question">¿Seguro que quieres desactivar esta tarjeta temporalmente? Dejará de ser tu tarjeta favorita.</string>
	<string name="deactivate_confirm">Desactivar</string>
	<string name="deactivate_ok">Tarjeta desactivada con éxito.\nPuedes volver a activarla en cualquier momento.</string>

	<!-- CVV -->
	<string name="cvv_info">Tu código CVV2 es:</string>
	<string name="cvv_see_again">Volver a ver</string>
	<string name="cvv_asterisk">***</string>

	<!-- Pin -->
	<string name="pin_info">Tu código PIN es:</string>
	<string name="pin_see_again">Volver a ver</string>
	<string name="pin_asterisk">****</string>

	<!-- Timer-->
	<string name="timer_5_sec">00:05</string>
	<string name="timer_4_sec">00:04</string>
	<string name="timer_3_sec">00:03</string>
	<string name="timer_2_sec">00:02</string>
	<string name="timer_1_sec">00:01</string>
	<string name="timer_0_sec">00:00</string>

	<!-- Card Transactions-->
	<string name="card_transactions_empty">No hay movimientos</string>
	<string name="card_transactions_end_list">No hay más movimientos</string>

	<!-- Card Detail-->
	<string name="card_detail_expiration_date">Fecha caducidad</string>
	<string name="card_detail_beneficiary">Beneficiario</string>
	<string name="card_detail_status">Situación</string>
	<string name="card_detail_status_activated">Activada</string>
	<string name="card_detail_status_deactivated">Desactivada</string>
	<string name="card_detail_nfc">Pagos NFC</string>
	<string name="card_detail_type">Tipo Tarjeta</string>
	<string name="card_detail_balance">Saldo actual</string>
	<string name="card_detail_current_balance">Saldo dispuesto</string>
	<string name="card_detail_available_amount">Saldo disponible</string>
	<string name="card_detail_credit_limit">Límite de crédito</string>

	<!-- Payments-->
	<string name="nfc_not_compatible">El dispositivo no es compatible con NFC</string>
	<string name="nfc_not_enabled">NFC no está activado en el dispositivo</string>
	<string name="nfc_favorite_but_not_enabled">Se ha establecido la tarjeta favorita, sin embargo, no podrá realizar pagos hasta que NFC no se encuentre
		activado en el dispositivo
	</string>

	<string name="payment_user_tap">Aproxime el teléfono al TPV</string>
	<string name="payment_title">Compra con tarjeta</string>

</resources>
