<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bground_keypad">

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:gravity="center"
		android:scaleType="centerInside"
		android:src="@drawable/logo_tool_bar"/>

	<LinearLayout
		android:id="@+id/operation_signature_keypad_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:gravity="center_horizontal|bottom"
		android:orientation="vertical"
		android:paddingBottom="15dp"
		android:visibility="visible">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/operation_signature_button_1"
				android:text="@string/_1"
				style="@style/OperationButton"/>

			<Button
				android:id="@+id/operation_signature_button_2"
				android:text="@string/_2"
				style="@style/OperationButton"/>

			<Button
				android:id="@+id/operation_signature_button_3"
				android:text="@string/_3"
				style="@style/OperationButton"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/operation_signature_button_4"
				android:text="@string/_4"
				style="@style/OperationButton"/>

			<Button
				android:id="@+id/operation_signature_button_5"
				android:text="@string/_5"
				style="@style/OperationButton"/>

			<Button
				android:id="@+id/operation_signature_button_6"
				android:text="@string/_6"
				style="@style/OperationButton"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/operation_signature_button_7"
				android:text="@string/_7"
				style="@style/OperationButton"/>

			<Button
				android:id="@+id/operation_signature_button_8"
				android:text="@string/_8"
				style="@style/OperationButton"/>

			<Button
				android:id="@+id/operation_signature_button_9"
				android:text="@string/_9"
				style="@style/OperationButton"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">

			<ImageButton
				android:id="@+id/operation_signature_back_button"
				android:src="@drawable/icn_delete"
				android:visibility="invisible"
				tools:visibility="visible"
				style="@style/OperationButton"/>

			<Button
				android:id="@+id/operation_signature_button_0"
				android:text="@string/_0"
				style="@style/OperationButton"/>

			<Button
				android:id="@+id/operation_signature_ok_button"
				android:fontFamily="@string/font_fontFamily_medium"
				android:text="@string/_ok"
				android:textAllCaps="true"
				android:textColor="@color/button_operation_ok_text_selector"
				android:textSize="14dp"
				android:visibility="invisible"
				tools:visibility="visible"
				style="@style/OperationButton"/>

		</LinearLayout>

	</LinearLayout>

	<EditText
		android:id="@+id/operation_signature_password_textview"
		android:layout_width="260dp"
		android:layout_height="wrap_content"
		android:layout_above="@+id/operation_signature_keypad_view"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="@dimen/login_button_height"
		android:background="@drawable/keypad_password_background"
		android:enabled="false"
		android:gravity="center"
		android:inputType="textPassword"
		android:singleLine="true"
		android:textColor="@color/ui_white"
		android:textSize="48dp"
		tools:text="12345678"/>

	<TextView
		android:id="@+id/operation_signature_question_textview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/operation_signature_password_textview"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="16dp"
		android:gravity="center"
		android:maxLines="2"
		android:textColor="@color/ui_white"
		android:textSize="16dp"
		tools:text="@string/operation_signature_enter"/>

</RelativeLayout>
