<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<include
		layout="@layout/view_toolbar"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:orientation="horizontal"
				android:weightSum="3">

				<TextView
					android:id="@+id/home_detail_textview"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="@drawable/tab_background_selector"
					android:gravity="center"
					android:text="@string/home_detail"
					android:textColor="@color/ui_text_light_gray"
					android:textSize="16dp"/>

				<TextView
					android:id="@+id/home_ccv_textview"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="@drawable/tab_background_selector"
					android:gravity="center"
					android:text="@string/home_ccv"
					android:textColor="@color/ui_text_light_gray"
					android:textSize="16dp"/>

				<TextView
					android:id="@+id/home_pin_textview"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="@drawable/tab_background_selector"
					android:gravity="center"
					android:text="@string/home_pin"
					android:textColor="@color/ui_text_light_gray"
					android:textSize="16dp"/>

			</LinearLayout>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:background="@color/ui_white">

				<TextView
					android:id="@+id/home_card_alias_textview"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true"
					android:layout_marginLeft="24dp"
					android:textColor="@color/ui_text_black"
					android:textSize="18dp"
					tools:text="Wisa Platinum"/>

				<ImageView
					android:id="@+id/home_card_branch_imageview"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="24dp"
					tools:src="@drawable/logo_wisa"/>

			</RelativeLayout>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/ui_background_gray"
				android:gravity="center">

				<android.support.v4.view.ViewPager
					android:id="@+id/home_cards_viewpager"
					android:layout_width="match_parent"
					android:layout_height="@dimen/cards_pager_heigth"
					android:layout_marginTop="10dp"/>

			</RelativeLayout>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:background="@color/ui_white">

				<TextView
					android:id="@+id/home_debit_textview"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:text="@string/_debit"
					android:textColor="@color/ui_text_black"
					android:textSize="22dp"
					android:visibility="gone"
					tools:visibility="gone"/>

				<ImageView
					android:id="@+id/home_credit_balance_imageview"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:visibility="gone"
					tools:src="@drawable/bground_progress_2"
					tools:visibility="gone"/>

				<LinearLayout
					android:id="@+id/home_prepaid_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_centerInParent="true"
					android:orientation="horizontal"
					android:visibility="gone"
					tools:visibility="visible">

					<TextView
						android:id="@+id/home_prepaid_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/home_prepaid_balance"
						android:textColor="@color/ui_text_black"
						android:fontFamily="@string/font_fontFamily_light"
						android:textSize="22dp"/>

					<TextView
						android:id="@+id/home_prepaid_textview"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="16dp"
						tools:text="12,35€"
						android:textColor="@color/ui_text_black"
						android:textSize="22dp"/>

				</LinearLayout>

			</RelativeLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="76dp"
				android:background="@color/ui_white"
				android:orientation="horizontal"
				android:weightSum="3">

				<LinearLayout
					android:id="@+id/home_activation_clickable_view"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="@drawable/white_item_background_selector"
					android:clickable="true"
					android:gravity="center"
					android:orientation="vertical">

					<ImageView
						android:id="@+id/home_activation_icon_imageview"
						android:layout_width="40dp"
						android:layout_height="30dp"
						android:scaleType="centerInside"
						tools:src="@drawable/icn_activate"/>

					<TextView
						android:id="@+id/home_activation_textview"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						android:textColor="@color/ui_text_gray"
						android:textSize="14dp"
						tools:text="@string/home_activate"/>

				</LinearLayout>

				<View
					android:layout_width="1dp"
					android:layout_height="match_parent"
					android:background="@color/ui_divider"/>

				<LinearLayout
					android:id="@+id/home_transactions_clickable_view"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="@drawable/white_item_background_selector"
					android:clickable="true"
					android:gravity="center"
					android:orientation="vertical">

					<ImageView
						android:id="@+id/home_transactions_icon_imageview"
						android:layout_width="40dp"
						android:layout_height="30dp"
						android:scaleType="centerInside"
						android:src="@drawable/icn_moves_on"/>

					<TextView
						android:id="@+id/home_transactions_textview"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						android:text="@string/home_transactions"
						android:textColor="@color/ui_text_gray"
						android:textSize="14dp"/>

				</LinearLayout>

				<View
					android:layout_width="1dp"
					android:layout_height="match_parent"
					android:background="@color/ui_divider"/>

				<LinearLayout
					android:id="@+id/home_favorite_clickable_view"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="@drawable/white_item_background_selector"
					android:clickable="true"
					android:gravity="center"
					android:orientation="vertical">

					<ImageView
						android:id="@+id/home_favorite_icon_imageview"
						android:layout_width="40dp"
						android:layout_height="30dp"
						android:scaleType="centerInside"
						tools:src="@drawable/icn_favs_off"/>

					<TextView
						android:id="@+id/home_favorite_textview"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						android:text="@string/home_favorite"
						android:textColor="@color/ui_text_gray"
						android:textSize="14dp"/>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/ui_white"
				android:gravity="bottom"
				android:orientation="vertical">

				<Button
					android:id="@+id/home_activate_button"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:text="@string/home_activate_card"
					android:visibility="gone"
					style="@style/AppButton.Black"/>

				<Button
					android:id="@+id/home_pay_button"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:text="@string/home_pay"
					style="@style/AppButton.Green"/>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>
